logs/watchdog_20251011_1800.log
[11/10/2025 18:00:01,65] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 18:00:01,90] END WATCHDOG 
